# diabetes_project

./:  Jenkinsfile_with_docker  .flake8  .gitignore  .pre-commit-config.yaml  Jenkinsfile  Jenkinsfile_with_metrics  Makefile  README.md  docker-compose.yml  requirements.txt
chat_api/: Dockerfile  pyproject.toml
chat_api/chat_api/: app.py  classifier.py  main.py
chat_api/chat_api/routes/: chat.py
chat_api/chat_api/utils/: diabetes_data.py
deployment/diabetes_core/: docker-compose.yaml
deployment/instrument/: Dockerfile  client.py  pyproject.toml
deployment/instrument/metrics/: metrics.py
deployment/instrument/traces/: trace_automatic.py  trace_manual.py
deployment/jenkins_ops/: Jenkinsfile
deployment/monitoring/: prom-graf-docker-compose.yaml
deployment/monitoring/prometheus/config/: prometheus.yml
deployment/monitoring_docker/alertmanager/: config.yml
deployment/monitoring_k8s/04-setup-observability/: serviceMonitor.yaml
deployment/monitoring_k8s/prometheus/: prometheus-clusterRole-updated.yaml  prometheus.yaml  servicemonitor.yaml
deployment/service_k8s/helm_charts/: README.md
deployment/service_k8s/helm_charts/service_ingress/: Chart.yaml  values.yaml
deployment/service_k8s/helm_charts/service_wo_ingress/: Chart.yaml  values.yaml
diabetes/: pyproject.toml
diabetes/diabetes/: config.py
diabetes/diabetes/models/: gscv-0.81.sav  gscv-0.843.sav
diabetes/diabetes/workflow/: __init__.py
diabetes/diabetes/workflow/steps/: evaluate_model.py  load_model.py  preprocessing_data.py
diabetes/example/: main.py
(+6 files in other folders)
