[tool.poetry]
name = "diabetes"
version = "0.1.0"
description = ""
authors = ["thy-hoang-nn <hoangthynguyennguyen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.0"
rich = "^13.6.0"
fastapi = "^0.103.2"
numpy = "1.22.4"
pandas = "1.4.4"
scikit-learn = "^1.3.1"
lightgbm = "^4.1.0"
imblearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
